--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 100vh;
+            /* height: 100vh; */
             /* margin: 0; */
             background-image: url('bi.jpg');
             background-size: cover; 
@@ -84,7 +84,7 @@
             width: 600px;
             border-radius: 10px;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 200px;
             font-size: 20px;
             position: absolute;
             top: 50px; 
@@ -119,7 +119,7 @@
             height: 50;
             /* border: 2px solid black; */
             position: absolute;
-            top: 10px;
+            top: 20px;
             /* margin-bottom: 650px; */
             display: none;
         }
@@ -280,6 +280,9 @@
                 clearTimeout(g3);
                 clearTimeout(g4);
                 document.getElementById('board').style.display='none';
+                document.getElementById('start').pause();
+
+                
                 document.getElementById('over').style.display='block';
 
             }
@@ -299,17 +302,15 @@
                 document.getElementById('glass').style.gridColumnStart = glassdir.y;
             }
         }
-        let glass = document.getElementById('glass');
+
         document.addEventListener('touchmove', handleTouchMove, false);
         function handleTouchMove(e) {
-            if (sta == 1) {
-                let touch = e.touches[0]; // Get the first touch object
-                let touchX = touch.clientX; // Get the X coordinate of the touch
-                let boardRect = document.getElementById('board').getBoundingClientRect();
-                let ballX = (touchX - boardRect.left) / boardRect.width * 10;
-                glassdir.y = Math.round(ballX);
-                glass.style.gridColumnStart = glassdir.y;
-            }
+            let touch = e.touches[0]; // Get the first touch object
+            let touchX = touch.clientX; // Get the X coordinate of the touch
+            let boardRect = document.getElementById('board').getBoundingClientRect();
+            let glassX = (touchX - boardRect.left) / boardRect.width * 14; // Calculate the glass column position (1 to 14)
+            glassdir.y = Math.round(glassX); // Update the glass column position
+            document.getElementById('glass').style.gridColumnStart = glassdir.y; // Move the glass
         }
         window.addEventListener('keydown', e => {
             if (e.key == "ArrowLeft") {
