--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Catch the Water Drops</title>
     <style>
+        html, body {
+            height: 100%;
+            /* margin: 0; */
+        }
         body{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 95vh;
+            /* height: 95vh; */
             /* margin: 0; */
-            background-color: green;
+            /* background-color: green; */
             background-image: url('bi.jpg');
             background-size: cover; 
             background-position: center;
@@ -27,7 +31,7 @@
             display: grid;
             grid-template-rows: repeat(15, 1fr);
             grid-template-columns: repeat(14, 1fr);
-            position: relative;
+            /* position: relative; */
         }
         #glass {
             display: none;
@@ -129,17 +133,16 @@
     </style>
 </head>
 <body>
-    <div>
-    <div id="over" style="display:none; margin-top: 150px;">
-        <h2>You PLayed Very Well</h2>
-        <p>Play Again and Cross the Highest Score</p>
-        <button onclick="restart()" style="font-size: 20px; border-radius: 20px; cursor: pointer; padding: 10px;">Start Again</button>
-    </div>
     <h1 id="score">Score: <span id="sc">0</span></h1>
     <div id="gal">
         <img src="g.png" id="i1" style="width: 50px; height: 50px;">
         <img src="g.png" id="i2" style="width: 50px; height: 50px;" >
         <img src="g.png" id="i3" style="width: 50px; height: 50px; ">
+    </div>
+    <div id="over" style="display:none; margin-top: 150px;">
+        <h2>You PLayed Very Well</h2>
+        <p>Play Again and Cross the Highest Score</p>
+        <button onclick="restart()" style="font-size: 20px; border-radius: 20px; cursor: pointer; padding: 10px;">Start Again</button>
     </div>
     <div id="board">
         <div id="instructions">
