--- a/index.html
+++ b/index.html
@@ -139,26 +139,26 @@
         <img src="g.png" id="i3" style="width: 50px; height: 50px; ">
     </div>
     <div id="over" >
-        <h2>You PLayed Very Well</h2>
-        <p>Play Again and Cross the Highest Score</p>
+        <h2>You Played Very Well</h2>
+        <p>Play Again and Beat the Highest Score</p>
         <button onclick="restart()" style="font-size: 20px; border-radius: 20px; cursor: pointer; padding: 10px;">Start Again</button>
     </div>
     <div id="board">
         <div id="instructions">
             <h2>How to Play</h2>
-            <p>Use the left and right arrow keys to move the glass.<br>In Mobile phone Move the Glass</p>
+            <p>Use the left and right arrow keys to move the glass.<br>On mobile, move the glass by dragging.</p>
             <p>Catch the falling water drops in the glass to score points.</p>
-            <p>Avoid the Ice to keep the game going.</p>
-            <p>If you Catch the Ice then the glass will break.</p>
-            <p>But Don't Worry there is 3 glasses.</p>
+            <p>Avoid the ice to keep the game going.</p>
+            <p>If you catch the ice, the glass will break.</p>
+            <p>But don't worry, you have 3 glasses.</p>
         </div>
         <button id="stbu" onclick="start()">Start</button>
         <div id="glass"></div>
     </div>
     <h1 id="hsc">Highest Score: <span id="water">0</span></h1>
     <audio src="start.mp3" id="start"></audio>
-    <audio src="watersound.mp3" id="watersound"></audio>
-    <audio src="glassbreaking.mp3" id="glassbreaking"></audio>
+    <audio src="watersound1.mp3" id="watersound"></audio>
+    <audio src="glassbreaking1.mp3" id="glassbreaking"></audio>
     <audio id="bg-music" loop>
         <source src="rain1.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
